--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,27 @@
-spring.datasource.url=jdbc:h2:file:D:/h2db/internet-programming
+#test memdatabase
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#realdb
+
+spring.datasource.url=jdbc:h2:file:D:/h2db/internet-programming-project
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.name=internet-programming
-#spring.h2.console.enable=
+spring.datasource.name=internet-programming-project
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
 
+#config public port
+#--server.port=8065
+#server.context-path=192.168.1.44
+
+#first run
 #spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
